# dekleer-2023-aurora-pipeline

./: MANIFEST.in  README.md  setup.cfg
.github/workflows/: ci.yaml
khan/: __init__.py  common.py  graphics.py
khan/analysis/: average_brightness_retrieval.py  background_removal.py  brightness_retrieval.py  data_retrieval.py  flux_calibration.py  processing.py  quality_assurance.py
khan/anc/: legacy_detector_templates.pickle  mosaic_detector_templates.pickle
khan/pipeline/: files.py  flux_calibration.py  images.py  instrument_correction.py  quality_assurance.py  rectification.py  reduction.py  wavelength_calibration.py
khan/pipeline/tests/: test_files.py  test_images.py  test_rectification.py
khan/planner/: base.py  ephemeris.py  time.py
khan/planner/tests/: test_base.py  test_ephemeris.py  test_time.py
khan/tests/: test_graphics.py
