[metadata]
name = Keck HIRES Aurora pipeliNe
version = 0.2.1
author = Zachariah Milby
description = A pipeline to reduce Keck HIRES echelle observations of the Galilean satellites and retrieve their oxygen aurora brightnesses.
home_page = https://github.com/zachariahmilby/galilean-satellite-aurora

[options]
include_package_data = True
python_requires >= 3.10
packages = find:
install_requires =
   astropy>=5.0
   matplotlib>=3.5.0
   numpy>=1.21.2
   pandas>=1.3.4
   pytz>=2021.3
   astroplan>=0.8
   astroquery>=0.4.4
   lmfit>=1.0.3
   scipy>=1.8.0
   scikit-learn>=1.0.2
   sphinx>=4.4.0
   ccdproc>=2.3.0

[options.extras_require]
test =
   pytest
